# homework-9

./: .env  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
src/quotes_toscrape_com/: spiders.py
src/scrapper/: scrapper.py
