[build-system]
requires = ["setuptools>=68.0", "setuptools_scm[toml]>=7.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "homework-9"
# version = "0.0.1"
dynamic = ["version"]
authors = [
  { name="Volodymyr Zawatsky", email="volodymyr.zawatsky@gmail.com" },
]
description = "homework-9"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "Scrapy==2.11.0",
  # "dnspython==2.4.2",
  # "pymongo==4.5.0",
  # "mongoengine==0.27.0",
  # "registrator@git+https://www.github.com/madzwb/registrator@0.3.0",
]

[project.scripts]
main = "main:main"

# [project.entry-points]
# sorter = {sorter = "filesorter.sorter"}


[project.urls]
"Homepage" = "https://github.com/madzwb-GoIT-Python-Web/homework-9"
"Bug Tracker" = "https://github.com/madzwb-GoIT-Python-Web/homework-9/issues"

# See https://github.com/pypa/setuptools_scm/blob/main/pyproject.toml
[tool.setuptools_scm]
# "calver-by-date" "guess-next-dev" "no-guess-dev" "post-release" "python-simplified-semver" "release-branch-semver"
version_scheme = "release-branch-semver"
# "dirty-tag" "node-and-date" "node-and-timestamp"
local_scheme =  "no-local-version"

[tool.setuptools]
include-package-data = true
# packages = ["filesorter"]

# [tool.setuptools.packages.find]
# where = ["data"]
